[tool.poetry]
name = "yabla-script"
version = "0.1.0"
description = ""
authors = ["Spencer Pogorzelski <34356756+Scoder12@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
